# apple-mail-py

./: .gitignore  CLAUDE.md  justfile  pyproject.toml
docs/plans/: 2026-03-19-apple-mail-py-design.md  2026-03-19-apple-mail-py-plan.md  2026-03-19-email-triage-design.md
plugin/claude-code/: .mcp.json
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/commands/: mail-triage.md
plugin/claude-code/skills/mail-operations/: SKILL.md
plugin/claude-code/skills/mail-triage/: SKILL.md
src/apple_mail/: __init__.py  applescript.py  cli.py  client.py  db.py  db_finder.py  emlx.py  errors.py  mcp_server.py  models.py  search_index.py  server.py
src/apple_mail_cli/: cli.py
src/clawmail/: __init__.py  cli.py
tests/: conftest.py  test_applescript.py  test_attachments.py  test_cli.py  test_cli_thread.py  test_client.py  test_db.py  test_db_finder.py  test_models.py  test_search.py  test_thread.py  test_triage.py
