[project]
name = "apple-mail-py"
version = "0.1.0"
description = "Python library and CLI for reading Apple Mail on macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
]

[project.scripts]
apple-mail = "apple_mail.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88
